--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" rel="noopener" target="_blank" href="api2.css">
 </head>
 <body>
- 
+ <h1 class="heading">Press on any image to view information about the image that I bet you could not live<br> without. Make sure not to press on the "X" when you close the informative box!</h1>
 <div class="wrapper">
     <!-- <div id ="one">One</div>
     <div id="two">Two</div>
